--- a/smart_health/src/styles/Navbar.css
+++ b/smart_health/src/styles/Navbar.css
@@ -179,3 +179,9 @@
   from { transform: rotate(0); }
   to { transform: rotate(360deg); }
 }
+
+/* Add this to your Navbar.css to group the switcher and button */
+.navbar-right {
+    display: flex;
+    align-items: center;
+}
